--- a/www/main.css
+++ b/www/main.css
@@ -4,10 +4,10 @@ html, body {
 }
 
 #editor {
-  top: 0;
+  top: 40px;
   left: 0;
+  bottom: 0px;
   width: 30%;
-  height: 100%;
 
   margin: 0px;
   padding: 0px;
@@ -18,10 +18,10 @@ html, body {
 }
 
 #glcanvas {
-  top: 0;
+  top: 40px;
   left: 30%;
   width: 70%;
-  height: 100%;
+  height: calc(100% - 40px);
 
   margin: 0px;
   padding: 0px;
@@ -42,9 +42,34 @@ html, body {
   font-size: 24px;
 }
 
-#scenario {
-  bottom: 20px;
-  left: 20px;
+#toolbar {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 40px;
 
   position: absolute;
+  overflow: hidden;
+
+  font-size: 18px;
+  font-family: "Droid Sans Mono", monospace, monospace, "Droid Sans Fallback";
+  font-feature-settings: "liga" 0, "calt" 0;
+
+  background-color: #1e1e1e;
+  color: #d4d4d4;
+  border-bottom: 1px solid rgba(191, 191, 191, .4);;
+}
+
+.toolbar-elem {
+  margin: 10px;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 24px;
+  float: left;
+}
+
+.right {
+  float: right;
 }
