--- a/app/style.css
+++ b/app/style.css
@@ -128,6 +128,13 @@ a:hover {
   border: 1px solid rgba(191, 191, 191, 0.4);
 }
 
+.small-overlay {
+  top: 40%;
+  left: 40%;
+  width: 20%;
+  height: 20%;
+}
+
 .centered {
   text-align: center;
 }
@@ -160,4 +167,12 @@ td {
 
 .errorDecoration {
   background-color: #881e1e;
+}
+
+h1.compiling {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
