--- a/app/style.css
+++ b/app/style.css
@@ -115,6 +115,7 @@ a:hover {
   left: 0%;
   width: 100%;
   height: 100%;
+  z-index: 100;
 
   backdrop-filter: blur(6px);
   background-color: rgba(0, 0, 0, 0.4);
@@ -138,6 +139,25 @@ a:hover {
   left: 40%;
   width: 20%;
   height: 20%;
+}
+
+#compiler-errors {
+  position: absolute;
+  top: 100px;
+  left: calc(80ch + 50px);
+  width: calc(100% - 80ch - 100px);
+  height: calc(100% - 200px);
+
+  overflow: auto;
+  background-color: #1e1e1e;
+  border: 1px solid rgba(191, 191, 191, 0.4);
+}
+
+#compiler-errors pre {
+  padding: 20px;
+  padding-top: 0;
+  font-family: "Droid Sans Mono", monospace, monospace, "Droid Sans Fallback";
+  color: #d4d4d4;
 }
 
 .centered {
