--- a/app/style.css
+++ b/app/style.css
@@ -9,10 +9,10 @@ body {
 }
 
 #editor {
-  top: 40px;
+  top: 0px;
   left: 0;
   bottom: 0px;
-  width: 80ch;
+  width: 100%;
 
   margin: 0px;
   padding: 0px;
@@ -23,10 +23,8 @@ body {
 }
 
 #glcanvas {
-  top: 40px;
-  left: 80ch;
-  width: calc(100% - 80ch);
-  height: calc(100% - 40px);
+  width: 100%;
+  height: 100%;
 
   margin: 0px;
   padding: 0px;
@@ -48,8 +46,8 @@ body {
 }
 
 #picked {
-  top: 45px;
-  left: 55ch;
+  top: 20px;
+  left: 20px;
   position: absolute;
   font-family: "Share Tech Mono", monospace;
   font-size: 24px;
