--- a/app/style.css
+++ b/app/style.css
@@ -29,7 +29,7 @@ body {
   z-index: 0;
 }
 
-#glcanvas {
+.glcanvas {
   width: 100%;
   height: 100%;
 
@@ -41,7 +41,7 @@ body {
   z-index: 0;
 }
 
-#status {
+.status {
   bottom: 20px;
   right: 20px;
   height: 24px;
@@ -52,7 +52,7 @@ body {
   font-size: 24px;
 }
 
-#picked {
+.picked {
   top: 20px;
   left: 20px;
   position: absolute;
@@ -60,7 +60,7 @@ body {
   font-size: 24px;
 }
 
-#picked_text {
+.picked pre {
   margin: 0;
   color: #dddddd;
   font-family: "Share Tech Mono", monospace;
