app: color users own leaderboard entry

--- a/frontend/app/style.css
+++ b/frontend/app/style.css
@@ -213,6 +213,10 @@ td {
   padding-bottom: 10px;
 }
 
+.leaderboard tr.own-leaderboard-entry {
+  color: #47cb47;
+}
+
 .errorDecoration {
   background-color: #881e1e;
 }
