--- a/frontend/app/style.css
+++ b/frontend/app/style.css
@@ -29,6 +29,21 @@ body {
   z-index: 0;
 }
 
+.run_button {
+  width: 40px;
+  height: 40px;
+  right: 24px;
+  top: 1px;
+  position: absolute;
+}
+
+.run_button span {
+  font-size: 48px;
+  cursor: pointer;
+  text-shadow: 1px 1px #444444;
+  color: #aaaaaa;
+}
+
 .glcanvas {
   width: 100%;
   height: 100%;
