--- a/frontend/app/style.css
+++ b/frontend/app/style.css
@@ -172,33 +172,6 @@ a:hover {
   height: 20%;
 }
 
-#compiler-errors {
-  position: absolute;
-  top: 10%;
-  left: 10%;
-  width: 80%;
-  height: 80%;
-
-  overflow: auto;
-  background-color: #1e1e1e;
-  border: 1px solid rgba(191, 191, 191, 0.4);
-}
-
-.hidden {
-  visibility: hidden;
-}
-
-.visible {
-  visibility: visible;
-}
-
-#compiler-errors pre {
-  padding: 20px;
-  padding-top: 0;
-  font-family: "Droid Sans Mono", monospace, monospace, "Droid Sans Fallback";
-  color: #d4d4d4;
-}
-
 .centered {
   text-align: center;
 }
@@ -242,6 +215,14 @@ div.welcome {
 div.documentation {
   padding: 1rem;
   width: calc(min(100% - 2rem, 80em));
+}
+
+div.compiler-output {
+  padding: 1rem;
+}
+
+div.compiler-errors pre {
+  font-family: "Droid Sans Mono", monospace, monospace, "Droid Sans Fallback";
 }
 
 .errorDecoration {
