app: fix devicePixelRatio on Android

--- a/frontend/app/style.css
+++ b/frontend/app/style.css
@@ -6,6 +6,11 @@ body {
   color: #d4d4d4;
   font-family: "Ubuntu", sans-serif;
   overflow: hidden;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
 }
 
 #goldenlayout {
