--- a/frontend/app/style.css
+++ b/frontend/app/style.css
@@ -177,6 +177,30 @@ a:hover {
   height: 20%;
 }
 
+#loading-outer {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+
+  backdrop-filter: blur(6px);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+#loading-inner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+
+  overflow: auto;
+  background-color: black;
+  border: 1px solid rgba(191, 191, 191, 0.4);
+}
+
 .centered {
   text-align: center;
 }
