--- a/frontend/app/style.css
+++ b/frontend/app/style.css
@@ -49,6 +49,21 @@ body {
   color: #aaaaaa;
 }
 
+.replay_button {
+  width: 30px;
+  height: 30px;
+  right: 29px;
+  top: 50px;
+  position: absolute;
+}
+
+.replay_button span {
+  font-size: 36px;
+  cursor: pointer;
+  text-shadow: 1px 1px #444444;
+  color: #aaaaaa;
+}
+
 .glcanvas {
   width: 100%;
   height: 100%;
