app: show rank on leaderboard and always display current player

--- a/frontend/app/style.css
+++ b/frontend/app/style.css
@@ -265,6 +265,11 @@ td {
   color: #47cb47;
 }
 
+.leaderboard td.skip {
+  text-align: center;
+  font-style: italic;
+}
+
 div.welcome {
   margin-left: auto;
   margin-right: auto;
