Set up lib.rs generation from selected entry point

--- a/frontend/app/style.css
+++ b/frontend/app/style.css
@@ -413,3 +413,23 @@ b.error {
 #seed-window button {
   margin-left: 5px;
 }
+
+ul.oort-picker {
+  --width: 20rem;
+  width: var(--width);
+  background-color: #111111;
+  color: #999999;
+  list-style: none;
+  left: calc(50% - var(--width) / 2);
+  padding: 0.25rem;
+
+  & li {
+    padding: 0.25rem;
+    cursor: pointer;
+
+    &:hover {
+      background: #222222;
+      color: #dddddd;
+    }
+  }
+}
